# ETL

./: README.md  pyproject.toml
dagster/domain-project/: README.md  pyproject.toml  setup.cfg  setup.py
dagster/domain-project/domain_project/: assets.py
dagster/domain-project/domain_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dagster/domain-project/domain_project/tmpz_0c3p7t/history/: runs.db
dagster/domain-project/domain_project/tmpz_0c3p7t/history/runs/: 066ebff7-ee40-4ab0-aa98-0f68fd8282c1.db  79801e51-782c-4348-827a-6924e2789f49.db  a67e3b7f-7e93-4d85-ac04-ab6b5d9c4f15.db  index.db
dagster/domain-project/domain_project/tmpz_0c3p7t/schedules/: schedules.db
dagster/domain-project/domain_project/tmpz_0c3p7t/storage/: load  normalize
dagster/domain-project/tmpgkdsdyvz/history/: runs.db
dagster/domain-project/tmpgkdsdyvz/history/runs/: index.db
dagster/domain-project/tmpgkdsdyvz/schedules/: schedules.db
dagster/domain-project/tmpkye389g9/history/: runs.db
dagster/domain-project/tmpkye389g9/history/runs/: 0bf0867d-c2a1-4c7d-af27-d9a3e6358281.db  index.db
dagster/domain-project/tmpkye389g9/schedules/: schedules.db
dagster/domain-project/tmpkye389g9/storage/: load  normalize
prefect/: setup.py
prefect/piplines.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
