[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["alxvmr <alexeeva.maria16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.1.17"
pandas = "^1.5.3"
prefect = "^2.7.12"
dagit = "^1.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
